css/style.css
body {
    margin: 0px;
}

h3 {
    font-weight: 550;
}

b {
    font-weight: 550;
}

em {
    padding-bottom: 5px;
}

#mainmap {
	width: 100%; 
    height: 100vh;
    padding: 0%;
    font-family: "Acto", Helvetica, sans-serif;
}

#title {
    position: absolute;
    z-index: 1000;
    left: 10px;
    top: 10px;
}

.title-text {
    display: inline;
    font-weight: 500;
    font-size: 30px;
    position: relative;
    left: 9px;
    top: 0px;
    color: #47473e;
    letter-spacing: 0.3;
}

.subtitle {
    position: relative;
    z-index: 1000;
    left: 80px;
    top: 48px;
    font-size: 1.15em;
    font-weight: 500;
    letter-spacing: 0.2;
    line-height: 1.3;
    color: #47473e;
} 

#active {
}

.leaflet-control-layers-expanded {
    font-size: 14px;
}

.leaflet-bar a, .leaflet-bar a:hover {
    width: 36px !important;
    height: 36px !important;
    line-height: 36px !important;
}

table {
    text-align: left;
    font-size: 12px;
}

td { 
    padding-right: 20px !important;
}


.btn-grey {
    display: inline-block;
    background-color: #AAA;
    color: #fff !important;
    padding: 2px 8px;
    border-radius: 10px;
    text-decoration: none;
    font-size: 1.1em;
}

.btn-grey:hover {
    background-color: #B1BAC2;
}

input[type="checkbox" i] { 
    display: none; 
}

.leaflet-control-layers-overlays span {
    border-radius: 4px;
    color: #47473e;
    cursor: pointer;
    display: block;
    font-weight: 400;
    text-align: left;
    padding: 2px 8px;
    background-color: #E2E2E2;
    margin-top: 5px;
    -moz-box-shadow:    inset 0 0 2px #666;
    -webkit-box-shadow: inset 0 0 2px #666;
    box-shadow:         inset 0 0 2px #666;
}

.layer-selected {
    background-color: #FFF !important;
    -moz-box-shadow:    inset 0 0 0.5px #666 !important;
    -webkit-box-shadow: inset 0 0 0.5px #666 !important;
    box-shadow:         inset 0 0 0.5px #666 !important;
}

.leaflet-control-layers-overlays span:hover {
    background-color: #CCC;
}

.leaflet-control-layers-list {
    margin-bottom: 0px;
}

.leaflet-control-layers-expanded {
    background-color: rgba(1,1,1,0);
    box-shadow: none;
    padding: 6px !important;
    font-size: 1.1em;
}

#legend {
    background: rgba(256,256,256,.8);
    border: 0px solid #47473e;
    border-radius: 4px;
    bottom: 10px;
    right: 10px;
    padding: 10px;
    position: absolute;
    z-index: 5000;
    font-size: 1.1em;
    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
}

.legend-label {
    position: relative;
    bottom: 2px;
}

.i {
    border-radius: 10px;
    display: inline-block;
    height: 12px;
    margin-left: 3px;
    margin-right: 4px;
    width: 12px;
    opacity: 1;
}

.cir {
    border-radius: 100%;
    display: inline-block;
    margin-right: 2px;
    border: 1.5px solid #777;
}

.xs {
    height: 8px;
    width: 8px;
    margin-left: 0px;
}

.s {
    height: 12px;
    width: 12px;
    margin-left: 0px;
}

.m {
    height: 18px;
    width: 18px;
    margin-left: 0px;
}

.l {
    height: 25px;
    width: 25px;
    margin-left: 0px;
}

 

/* Mobile */ 

@media (min-width: 500px) {
    #legend {
        display: block !important;
    }

    .leaflet-control-container {
        display: block !important;
    }
}

@media (max-width: 500px) {
    .title-text {
        top: 5px;
        font-size: 16px;
        display: flex;
    }

    .subtitle {
        display: none;  
    }

    .leaflet-popup-content-wrapper {
        max-width: 250px;
    }

    .leaflet-touch .leaflet-control-geocoder {
        max-width: 200px;
    }
}

